# lothal_util

./: .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md  docker-compose.yml
crates/lothal-ai/: Cargo.toml
crates/lothal-ai/src/: anomaly.rs  invoker.rs  lib.rs
crates/lothal-ai/src/briefing/: context.rs  format.rs  mod.rs
crates/lothal-ai/src/extract/: email.rs  mod.rs  schema.rs  validate.rs
crates/lothal-ai/src/functions/: calm_briefing.rs  diagnose_briefing.rs  entity_chat.rs  mod.rs  nilm_label.rs
crates/lothal-ai/src/mcp/: mod.rs  tools.rs
crates/lothal-ai/src/nilm/: label.rs  mod.rs  signature.rs
crates/lothal-ai/src/provider/: anthropic.rs  mod.rs  ollama.rs
crates/lothal-cli/: Cargo.toml
crates/lothal-cli/src/: main.rs
crates/lothal-cli/src/commands/: ai.rs  baseline.rs  bill.rs  daemon.rs  demo.rs  device.rs  experiment.rs  garden.rs  geometry.rs  ingest.rs  init.rs  livestock.rs  mod.rs  ontology.rs  property.rs  query.rs  recommend.rs  report.rs  simulate.rs  site.rs  water.rs
crates/lothal-cli/tests/: e2e_guthrie.rs
crates/lothal-core/: Cargo.toml
crates/lothal-core/src/: lib.rs  reading_event.rs  temporal.rs  units.rs
crates/lothal-core/src/ontology/: bill.rs  circuit.rs  device.rs  experiment.rs  garden.rs  livestock.rs  maintenance.rs  mod.rs  occupancy.rs  property_zone.rs  reading.rs  resource_flow.rs  site.rs  tree.rs  utility.rs  water.rs  weather.rs
crates/lothal-db/: Cargo.toml
crates/lothal-db/src/: lib.rs  pool.rs
crates/lothal-db/src/repo/: ai.rs  bill.rs  device.rs  experiment.rs  garden.rs  livestock.rs  maintenance.rs  mod.rs  property_zone.rs  reading.rs  resource_flow.rs  site.rs  water.rs  weather.rs
crates/lothal-engine/: Cargo.toml
crates/lothal-engine/src/: baseline.rs  experiment.rs  lib.rs  recommend.rs  simulate.rs  water_baseline.rs
crates/lothal-ingest/: Cargo.toml
crates/lothal-ingest/src/: csv_import.rs  ecobee.rs  flume.rs  green_button.rs  lib.rs  mqtt.rs  nws.rs
crates/lothal-ingest/src/bill/: guthrie.rs  mod.rs  oge.rs  ong.rs
crates/lothal-ontology/: Cargo.toml
crates/lothal-ontology/src/: event.rs  indexer.rs  lib.rs  link.rs  object.rs  query.rs  tools.rs  uri.rs
crates/lothal-ontology/src/action/: mod.rs  run.rs
crates/lothal-ontology/src/action/builtin/: apply_recommendation.rs  ingest_bill_pdf.rs  mod.rs  record_observation.rs  run_diagnostic.rs  schedule_maintenance.rs  scoped_briefing.rs
crates/lothal-ontology/src/describe_impls/: bill.rs  circuit.rs  device.rs  experiment.rs  flock.rs  garden_bed.rs  maintenance.rs  mod.rs  pool.rs  property_zone.rs  site.rs  structure.rs  utility_account.rs
crates/lothal-ontology/src/llm_function/: mod.rs  run.rs
crates/lothal-ontology/src/llm_function/builtin/: bill_extraction.rs  diagnostic.rs  mod.rs  scoped_briefing.rs
crates/lothal-ontology/tests/: action_smoke.rs  builtin_actions_smoke.rs  indexer_smoke.rs  query_smoke.rs
crates/lothal-web/: Cargo.toml
crates/lothal-web/src/: charts.rs  error.rs  main.rs  state.rs  templates.rs
crates/lothal-web/src/routes/: api.rs  entity.rs  map.rs  mod.rs  pages.rs  partials.rs  ws.rs
crates/lothal-web/static/css/: app.css  input.css
crates/lothal-web/static/js/: app.js
crates/lothal-web/templates/: base.html
crates/lothal-web/templates/pages/: bills.html  chat.html  energy.html  entity.html  lab.html  land.html  map.html  property.html  pulse.html  water.html
crates/lothal-web/templates/partials/: chart.html  empty_state.html  entity_timeline.html  sidebar.html  stat_card.html
deploy/: lothal.service
migrations/: 001_baseline.sql  001_core_ontology.sql  002_llm_calls.sql  002_timeseries.sql  003_experiments.sql  004_ai_layer.sql  005_property_zones.sql  006_water_systems.sql  007_livestock.sql  008_garden.sql  009_resource_flows.sql  010_microclimate.sql  011_scheduler_runs.sql  012_anomaly_alerts.sql  013_drop_trees.sql  014_geometry.sql  015_ontology.sql  016_experiment_baseline.sql
migrations/seed/: 001_bootstrap.sql
