[package]
name = "lothal-ai"
description = "AI layer — LLM bill parsing, daily briefings, MCP reasoning agent, NILM"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lothal-core = { workspace = true }
lothal-db = { workspace = true }
lothal-engine = { workspace = true }
lothal-ontology = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
