[package]
name = "lothal-cli"
description = "CLI interface for the lothal home efficiency ontology"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "lothal"
path = "src/main.rs"

[dependencies]
lothal-core = { workspace = true }
lothal-db = { workspace = true }
lothal-ingest = { workspace = true }
lothal-engine = { workspace = true }
lothal-ai = { workspace = true }
lothal-ontology = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
