[package]
name = "lothal-engine"
description = "Analytics engine — baselines, simulation, recommendations, experiments"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lothal-core = { workspace = true }
lothal-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
