[package]
name = "lothal-ingest"
description = "Data ingest pipelines for lothal — bill parsers, MQTT, weather, sensors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lothal-core = { workspace = true }
lothal-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rumqttc = { workspace = true }
quick-xml = { workspace = true }
csv = { workspace = true }
regex = { workspace = true }
