[package]
name = "lothal-ontology"
description = "Homestead efficiency ontology"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lothal-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
